
/*
* 本代码由cfgtool工具生成，请勿手动修改
*/

syntax = "proto3";

package universal;

option go_package = "universal/common/pb";


enum IdType {
	IdTypeNone = 0; // 路由类型-空
	Uid = 1; // 路由类型-Uid
	RoomId = 2; // 路由类型-RoomId
}

enum NodeType {
	Begin = 0; // 节点类型-Begin
	Gate = 1; // 节点类型-Gate
	Game = 2; // 节点类型-Game
	Db = 3; // 节点类型-Db
	Gm = 4; // 节点类型-Gm
	Match = 5; // 节点类型-Match
	Room = 6; // 节点类型-Room
	Builder = 7; // 节点类型-Builder
	End = 8; // 节点类型-End
}

enum SendType {
	SendTypeNode = 0; // 发送类型-空
	Point = 1; // 发送类型-单播
	Broadcast = 2; // 发送类型-广播
}

